// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarAdapter> render image 1`] = `
"<div class=\\"hig__avatar hig__avatar--size--medium hig__avatar__background-1\\">
  <div class=\\"hig__avatar__image\\">
    <img src=\\"https://api.adorable.io/avatars/400/abott@adorable.io.png\\">
  </div>
  <div class=\\"hig__avatar__initials\\">AA</div>
</div>"
`;

exports[`<AvatarAdapter> render image 2`] = `
"<div class=\\"hig__avatar hig__avatar--size--large hig__avatar__background-1\\">
  <div class=\\"hig__avatar__image\\">
    <img src=\\"https://api.adorable.io/avatars/400/abott@adorable.io.png\\">
  </div>
  <div class=\\"hig__avatar__initials\\">AA</div>
</div>"
`;

exports[`<AvatarAdapter> render image 3`] = `
"<div class=\\"hig__avatar hig__avatar--size--extralarge hig__avatar__background-1\\">
  <div class=\\"hig__avatar__image\\">
    <img src=\\"https://api.adorable.io/avatars/400/abott@adorable.io.png\\">
  </div>
  <div class=\\"hig__avatar__initials\\">AA</div>
</div>"
`;

exports[`<AvatarAdapter> render image small 1`] = `
"<div class=\\"hig__avatar hig__avatar--size--small hig__avatar__background-1\\">
  <div class=\\"hig__avatar__image\\">
    <img src=\\"https://api.adorable.io/avatars/400/abott@adorable.io.png\\">
  </div>
  <div class=\\"hig__avatar__initials\\">AA</div>
</div>"
`;

exports[`<AvatarAdapter> renders avatar without image 1`] = `
"<div class=\\"hig__avatar hig__avatar--size--large hig__avatar__background-6\\">
  <div class=\\"hig__avatar__image\\">
    <img src=\\"\\">
  </div>
  <div class=\\"hig__avatar__initials\\">RA</div>
</div>"
`;

exports[`<AvatarAdapter> renders the extralarge Avatar 1`] = `
"<div class=\\"hig__avatar hig__avatar--size--extralarge hig__avatar__background-2\\">
  <div class=\\"hig__avatar__image\\">
    <img src=\\"\\">
  </div>
  <div class=\\"hig__avatar__initials\\">EA</div>
</div>"
`;

exports[`<AvatarAdapter> renders the extralarge Avatar 2`] = `
"<div class=\\"hig__avatar hig__avatar--size--extralarge hig__avatar__background-2\\">
  <div class=\\"hig__avatar__image\\">
    <img src=\\"\\">
  </div>
  <div class=\\"hig__avatar__initials\\">EA</div>
</div>"
`;

exports[`<AvatarAdapter> renders the large Avatar 1`] = `
"<div class=\\"hig__avatar hig__avatar--size--large hig__avatar__background-4\\">
  <div class=\\"hig__avatar__image\\">
    <img src=\\"\\">
  </div>
  <div class=\\"hig__avatar__initials\\">LA</div>
</div>"
`;

exports[`<AvatarAdapter> renders the medium Avatar 1`] = `
"<div class=\\"hig__avatar hig__avatar--size--medium hig__avatar__background-5\\">
  <div class=\\"hig__avatar__image\\">
    <img src=\\"\\">
  </div>
  <div class=\\"hig__avatar__initials\\">MA</div>
</div>"
`;

exports[`<AvatarAdapter> renders the small Avatar 1`] = `
"<div class=\\"hig__avatar hig__avatar--size--small hig__avatar__background-7\\">
  <div class=\\"hig__avatar__image\\">
    <img src=\\"\\">
  </div>
  <div class=\\"hig__avatar__initials\\">SA</div>
</div>"
`;
